# proc-macro-workshop

./: .gitignore  Cargo.toml  main.rs
bitfield/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/tests/: progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
debug/src/: lib.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 01-parse-header.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: progress.rs
