[package]
edition = "2018"
name    = "proc-macro-workshop"
publish = false
version = "0.0.0"

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield       = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug   = { path = "debug" }
seq            = { path = "seq" }
sorted         = { path = "sorted" }

[features]
run-builder = []
run-seq     = []
run-sorted  = []
