[package]
autotests = false
edition   = "2018"
name      = "seq"
publish   = false
version   = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1.0.24" }
quote       = { version = "1.0.8" }
syn         = { version = "1.0.58", features = ["extra-traits", "full"] }
