[package]
autotests = false
edition   = "2018"
name      = "sorted"
publish   = false
version   = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version = "1.0.26" }
quote       = { version = "1.0.9" }
syn         = { version = "1.0.70", features = ["extra-traits", "full", "visit-mut"] }
